# aircraft-maintenance-rag

./: .env.example  .gitignore  ARCHITECTURAL_DECISIONS.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
config/: airbus_a320.json
src/data/: load_data.py  process_data.py  split_and_store_data.py
src/retrieval/: basic_chain.py  basic_retriever.py
src/util/: logging.py
