[project]
name = 'aircraft-maintenance-rag'
version = '0.1.0'
description = 'Add your description here'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
    'bs4>=0.0.2',
    'chromadb>=1.3.5',
    'langchain>=1.1.0',
    'langchain-community>=0.4.1',
    'langchain-ollama>=1.0.0',
    'pypdf>=6.4.0',
    'sentence-transformers>=5.1.2',
    'streamlit>=1.51.0',
]
